--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="he" dir="rtl">
 <head>
@@ -54,35 +53,35 @@
   <div class="row" style="margin-top:10px;">
     <button id="startBtn">התחל טיימר</button>
   </div>
-<div class="card" id="morningTimerCard" style="display:none;">
-  <h1>⏰ טיימר בוקר</h1>
-  <div id="morningTimer" class="timer">10:00</div>
-  <div id="morningStatus" class="muted">מוכן להתחיל</div>
-  <div class="row" style="margin-top:10px;">
-    <button id="startMorningBtn">התחל טיימר בוקר</button>
+
+  <div class="card" id="morningTimerCard" style="display:none;">
+    <h1>⏰ טיימר בוקר</h1>
+    <div id="morningTimer" class="timer">10:00</div>
+    <div id="morningStatus" class="muted">מוכן להתחיל</div>
+    <div class="row" style="margin-top:10px;">
+      <button id="startMorningBtn">התחל טיימר בוקר</button>
+    </div>
+    <div class="stat">
+      <div><strong>מספר לחיצות בוקר:</strong> <span id="morningCount">0</span></div>
+      <div><strong>הטיימר הבא:</strong> <span id="morningNext">10 דקות</span></div>
+    </div>
   </div>
-  <div class="stat">
-    <div><strong>מספר לחיצות בוקר:</strong> <span id="morningCount">0</span></div>
-    <div><strong>הטיימר הבא:</strong> <span id="morningNext">10 דקות</span></div>
+
+  <div style="margin-top:20px; text-align:center;">
+    <button id="showMorningBtn" style="background:#3f51b5; color:#fff; padding:8px 16px; border:none; border-radius:6px; cursor:pointer;">
+      הצג טיימר בוקר
+    </button>
   </div>
-</div>
-  
-  
-<!-- ציטוט/פתגם נגד עישון -->
-<!-- כפתור חשיפה -->
-<div style="margin-top:20px; text-align:center;">
-  <button id="showMorningBtn" style="background:#3f51b5; color:#fff; padding:8px 16px; border:none; border-radius:6px; cursor:pointer;">
-    הצג טיימר בוקר
-  </button>
-</div>
+
   <div class="hob">
     <h1>משפט אקראי</h1>
-    <div id="quote">טוען את zinbin.json…</div>
+    <div id="quote">טוען את quotes.json…</div>
     <div class="row">
       <button id="nextBtn" disabled>תן לי משפט</button>
     </div>
-   <!-- אחרי -->
-<div id="quoteStatus" class="muted"></div></div>
+    <div id="quoteStatus" class="muted"></div>
+  </div>
+
   <div class="stat">
     <div><strong>מספר לחיצות:</strong> <span id="pressCount">0</span></div>
     <div><strong>אורך הטיימר הבא:</strong> <span id="nextLength">30 דקות</span></div>
@@ -93,7 +92,6 @@
     <div id="avgText" class="muted">—</div>
   </div>
 
-  <!-- ספירה שמתאפסת אחרי 3 שעות בלי הפעלה -->
   <div class="stat">
     <div><strong>כמה עישנתי היום:</strong> <span id="dailyCount">0</span></div>
     <div class="muted" id="dailyNote">הספירה מתאפסת אם עברו 3 שעות מאז הסיגריה האחרונה</div>
@@ -111,12 +109,12 @@
 </div>
 
 <script>
-יאללה—הנה סקריפט מלא (JS בלבד) שמסדר את הכול:(() => {
+(() => {
   // ===== הגדרות =====
-  const BASE_MINUTES = 265;   // בסיס הטיימר הראשון
-  const INCREMENT    = 30;    // תוספת לכל לחיצה
+  const BASE_MINUTES = 30;   // בסיס הטיימר הראשון
+  const INCREMENT    = 5;    // תוספת לכל לחיצה
   const LS_KEY       = 'mySimpleTimer';
-  const JSON_URL     = 'zinbin.json'; // קובץ ה-JSON באותה תיקייה
+  const JSON_URL     = 'quotes.json'; // קובץ ה-JSON באותה תיקייה
 
   // אלמנטים
   const timerEl       = document.getElementById('timer');
@@ -180,18 +178,17 @@
     targetTs: null,
     totalSleepRemovedMin: 0,
     dailyCount: 0,
-    lastPressTs: null,
-    baseMinSnapshot: BASE_MINUTES
+    lastPressTs: null
   });
 
   const loadState = () => {
     try {
       const raw = localStorage.getItem(LS_KEY);
-      let s = raw ? JSON.parse(raw) : defaultState();
-      // אם שינית BASE_MINUTES – מאפס כדי שלא יבלגן את ההיסטוריה
-      if (s.baseMinSnapshot !== BASE_MINUTES) s = defaultState();
+      const s = raw ? JSON.parse(raw) : defaultState();
+      // הגנות
       if (typeof s.dailyCount !== 'number') s.dailyCount = 0;
       if (typeof s.lastPressTs !== 'number') s.lastPressTs = null;
+      if (typeof s.totalSleepRemovedMin !== 'number') s.totalSleepRemovedMin = 0;
       return s;
     } catch {
       return defaultState();
@@ -219,9 +216,9 @@
     return BASE_MINUTES + INCREMENT * Math.max(0, state.pressCount);
   }
 
-  // ===== ממוצע כנדרש: (מהלחיצה הראשונה עד עכשיו – שינה) / כל הלחיצות =====
+  // ===== ממוצע נדרש: (מהלחיצה הראשונה עד עכשיו – שינה) / כל הלחיצות =====
   function updateAverage() {
-    const n = state.pressCount; // כולל הלחיצה הנוכחית אם טיימר רץ
+    const n = state.pressCount;
     if (!state.firstPressTs || n <= 0) {
       avgTextEl.textContent = '—';
       return;
@@ -261,7 +258,7 @@
 
     if (!state.firstPressTs) state.firstPressTs = nowTs;
 
-    // לחיצה = “סיגריה”/סשן חדש
+    // לחיצה = התחלת סשן חדש
     state.pressCount += 1;
     state.dailyCount += 1;
     state.lastPressTs = nowTs;
@@ -300,7 +297,7 @@
     checkResetAfterInactivity();
     saveState();
 
-    // להציג מההתחלה את *הטיימר הבא* בפועל (לפי pressCount), לא 30:00 קשיח
+    // אם לא רץ — להציג את *הטיימר הבא* לפי pressCount, לא 30 קשיח
     const initialMinutes = nextTimerMinutes();
     if (!state.targetTs || state.targetTs <= Date.now()) {
       timerEl.textContent = mmss(initialMinutes * 60 * 1000);
@@ -319,7 +316,7 @@
     updateUI();
   })();
 
-  // ===== ציטוטים מתוך zinbin.json =====
+  // ===== ציטוטים מתוך quotes.json =====
   (function initQuotes() {
     if (!quoteEl || !nextBtn) return;
 
@@ -356,7 +353,7 @@
         quoteStatus.textContent = '';
       } catch(err){
         console.warn('טעינת JSON נכשלה. אם פתחת file:// זה צפוי. שגיאה:', err);
-        quoteStatus.textContent = '⚠️ לא הצלחתי לטעון את zinbin.json. ודא שהעמוד רץ משרת וששם הקובץ נכון.';
+        quoteStatus.textContent = '⚠️ לא הצלחתי לטעון את quotes.json. ודא שהעמוד רץ משרת וששם הקובץ נכון.';
         quotes = ["גיבוי: כל צעד קטן הוא ניצחון."];
       } finally {
         nextBtn.disabled = false;
@@ -365,11 +362,10 @@
     }
 
     nextBtn.addEventListener('click', pickRandom);
-    // נריץ מיד כי הסקריפט בסוף ה-body
-    loadQuotes();
+    loadQuotes(); // נטען מיד (הסקריפט בסוף ה-body)
   })();
 
-  // ===== טיימר בוקר (אופציונלי, בלי קשר לממוצע הראשי) =====
+  // ===== טיימר בוקר (אופציונלי) =====
   ;(() => {
     if (!showMorningBtn) return;
 
