--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
 <script>
 (() => {
   // ===== הגדרות =====
-  const BASE_MINUTES = 40;   // בסיס הטיימר הראשון
-  const INCREMENT    = 2;    // תוספת לכל לחיצה
-  const LS_KEY       = 'mySimpleTimer';
+  const BASE_MINUTES = 120;   // בסיס הטיימר הראשון
+  const INCREMENT    = 0;    // תוספת לכל לחיצה
+  const LS_KEY       = mySimpleTimer';
   const JSON_URL     = 'quotes.json'; // קובץ ה-JSON באותה תיקייה
 
   // אלמנטים
